MonetDB5/src/mal/Tests/tst900.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2002, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## the multiplex code blocks. Testing syntax errors
#
#b:= new(lng,lng);
#x:= multiplex.+(b,b);
#d:= [+](b,c) ;;# parser bug
#a:= b [+] b;
!ERROR: d:= [+](b,c) ;;# parser bug
!           ^<identifier> or <unary operator> expected
!ERROR: a:= b [+] b;
!             ^operator expected
>